[gd_scene load_steps=7 format=3 uid="uid://cw4e2g387dwus"]

[ext_resource type="Texture2D" uid="uid://bpptju3jx1wxi" path="res://Map/Art/icon.svg" id="1_4xoli"]
[ext_resource type="Script" uid="uid://ddtdko43wo6k" path="res://Map/Scripts/Collectible.gd" id="1_wqeun"]
[ext_resource type="Script" uid="uid://dilaexfbcjqw2" path="res://Map/Scenes/CollectingParticlesSetTexture.gd" id="3_o33hr"]
[ext_resource type="Texture2D" uid="uid://bhqnpcqfgs2nh" path="res://Game Sprites/Buttons/InteractButtons.png" id="3_ua201"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wqeun"]
radius = 20.0

[sub_resource type="SpriteFrames" id="SpriteFrames_7nkl6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_4xoli")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Collectible" type="Node2D"]
script = ExtResource("1_wqeun")

[node name="CollectibleArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectibleArea"]
shape = SubResource("CircleShape2D_wqeun")

[node name="CollectingCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="Marker2D" type="Marker2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.0546875, 0.0546875)
sprite_frames = SubResource("SpriteFrames_7nkl6")

[node name="CollectingParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.22
one_shot = true
speed_scale = 0.5
explosiveness = 0.1
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2(0, -1)
spread = 10.0
initial_velocity_min = 100.0
initial_velocity_max = 100.0
script = ExtResource("3_o33hr")

[node name="InteractButtons" type="Sprite2D" parent="."]
position = Vector2(14.6118, -24.6118)
scale = Vector2(0.711764, 0.711764)
texture = ExtResource("3_ua201")

[connection signal="body_entered" from="CollectibleArea" to="." method="_on_collectible_area_body_entered"]
[connection signal="body_exited" from="CollectibleArea" to="." method="_on_collectible_area_body_exited"]
[connection signal="timeout" from="CollectingCooldown" to="." method="_on_collecting_cooldown_timeout"]
